2009-02-21  Lucas Rocha  <lucasr@gnome.org>

	* gnome-session/gsm-manager.c: coding style fixes from last commit.

2009-02-21  Lucas Rocha  <lucasr@gnome.org>

	* gnome-session/gsm-manager.c (gsm_manager_start, cancel_end_session):
	always use gsm_manager_set_phase to set manager phase for consistency.

2009-02-21  Lucas Rocha  <lucasr@gnome.org>

	* gnome-session/gsm-manager.c: rename load_from_gconf to
	load_idle_delay_from_gconf for clarity.

2009-02-21  Matthias Clasen  <mclasen@redhat.com>

	* gnome-session/gsm-inhibit-dialog.c: Use system-log-out as icon,
	instead of gnome-logout, which doesn't exist.

2009-02-17  Frederic Crozat  <fcrozat@mandriva.com>

	* data/gsm-inhibit-dialog.glade: 
	Ensure treeview is included in a scrolled window with a shadow.

2009-02-17  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.25.92.

==================== 2.25.91 ====================

2009-02-17  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* configure.in: version 2.25.91

2009-02-13  Luca Ferretti <elle.uca@libero.it>

	* data/gnome-session.schemas.in: better phrase for
	"required_components_list" key, thanks to Dan Winship

2009-02-13  Luca Ferretti  <elle.uca@libero.it>

	reviewed by:  Vincent Untz  <vuntz@gnome.org>

	* capplet/gsm-properties-dialog.c: (gsm_properties_dialog_init):
	Use "Startup Applications Preference" as window title to mach
	capplet launcher Name.

2009-02-13  Luca Ferretti  <elle.uca@libero.it>

	* data/gnome-session.schemas.in:
	Removed obsolete "logout_option" key; fix and update long
	description for "required_components_list" key.

2009-02-12  Lucas Rocha  <lucasr@gnome.org>

	Bug 570908 – capplet misnomer

	* data/session-properties.desktop.in.in: change capplet name to
	"Startup Applications" and the description to "Choose what
	applications to start when you log in" to better match what the
	capplet actually does nowadays.

2009-02-11  Lucas Rocha  <lucasr@gnome.org>
