@@ -1,3 +1,8 @@
+2009-02-22  Lucas Rocha  <lucasr@gnome.org>
+
+	* capplet/gsm-properties-dialog.c: use G_KEY_FILE_DESKTOP_* constants
+	instead of hardcoded groups and key names.
+
 2009-02-21  Lucas Rocha  <lucasr@gnome.org>
 
 	* gnome-session/gsm-manager.c: coding style fixes from last commit.
